@@ -5,6 +5,7 @@ x.x:
 - added: CSV export for all the subsite admins
 - added: support for site_announcements admin menu item
 - added: support for paidsubscriptions admin user menu item
+- added: support for entity_tools on subsites by subsite admins
 - fixed: issue when assigning subsite admins during creation didn't give them the correct rights
 - fixed: missing support for some group_tools options
 - fixed: running deactivation scripts could break other subsites
